# Affordance-Guided-Interaction

./: .gitignore  LICENSE  README.md  URDF_TO_USD_CONVERSION.md  affordance_guided_door_interaction_conditional_stability_v11.md  affordance_layer_filled_v2.md  affordance_layer_rewritten_single_visual_v5.md  convert_lite_urdf_to_usd_basic_doc.md  documentation_consistency_audit_2026-04-02.md  project_architecture.md  project_completion_analysis.md  pyproject.toml  scene_setup.md  test_cam.py  test_usd.py  test_usd2.py  training_pipeline_detailed.md
assets/grasp_objects/: README.md  catalog.json
assets/minimal_push_door/: README.md  door_side_walls.usda  minimal_push_door.usda  room_shell.usda  solid_push_door.usda
assets/robot/: README.md
configs/: README.md
configs/curriculum/: default.yaml
configs/env/: default.yaml
configs/inference/: default.yaml
configs/policy/: default.yaml
configs/reward/: default.yaml
configs/task/: default.yaml
configs/training/: default.yaml
configs/visualization/: default.yaml
docs/: joint_position_control_migration.md  official_rl_games_alignment_plan.md  official_rl_games_alignment_review.md  randomization.md  tensorboard_guide.md  training_pipeline_detailed.md
scripts/: evaluate.py  export_policy.py  headless_reset_probe.py  load_scene.py  render_policy_rollouts.py  rollout_demo.py  train.py
src/affordance_guided_interaction/: __init__.py
src/teleop_cup_grasp/: README.md  cup_grasp_teleop.py  grasp_demo.py  grasp_demo_io.py  grasp_replay.py  isaac_servo_bridge.py  (+3 more)
src/teleop_cup_grasp/moveit_bridge/: CMakeLists.txt  package.xml
src/teleop_cup_grasp/moveit_bridge/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  robot.srdf  servo_parameters.yaml
src/teleop_cup_grasp/moveit_bridge/launch/: servo_teleop.launch.py
src/teleop_cup_grasp/moveit_bridge/rviz/: servo.rviz
tests/: test_base_relative_pickup.py  test_capture_launcher_layout.py  test_door_only_perception.py  test_grasp_demo_io.py  test_grasp_motion_profiles.py  test_grasp_object_assets.py  test_grasp_object_catalog.py  test_moveit_bridge_layout.py  test_moveit_bridge_python.py  test_observations.py  test_package_layout.py  test_pose_alignment.py  test_rewards.py  test_runtime_env.py  test_runtime_timing.py  test_usd_asset_paths.py  test_usd_math.py
(+142 files in other folders)
